Change Log

vD3.10.3 CWK 20151018
- Correcting accumulating kWh and resetting Wh going in and out of sleep state

vD3.10.2 SCL 20151017
- lots of changes to get rid of 1.6.5 compiler warnings(More)
- wmcbrine PR 48: more code shrinking from - manually merged
	
vD3.10.1 SCL 20151017
- merge PR 47 from wmcbrine
 - faster ulong_sqrt()
 - code saving tweaks to u2a() & SaveSettings()
	
vD3.10.0 SCL 20151017
- fix compile error caused by include for LiquidCrystal_I2C.h
	
vD3.10.0 SCL 20151012
- fix bug introduced by diode check state oscillation fix in D3.9.9 - if 
  transition to sleep while charging, on sleep exit would go into VENT REQ error
  -> if pilot voltage in State C range, but PWM off, go to State B
     this is an added safety feature, because State C should never be allowed
     when PWM is off
- fix bug: if enter sleep mode due to time/charge limit met, sleep should
  automatically be cancelled when car disconnected but it was staying in sleep
	
vD3.9.10 CWK 20150920
- GFI Self Test Duty Cylce restored to 50%

vD3.9.9 CWK/SCL 20150914
- fix diode check state oscillation bug (cwk/scl)
- hard fault on vent required (scl)
- setup() - increase I2C device delay from 200 -> 400ms (cwk) for Danny ter Haars board
- code cleanup of temperature monitoring to save 62 bytes
	
vD3.9.8 CWK 20150912
- fix Temperature Monitoring, broken by accident in D3.9.5 
      The original users amperage level is restored properly after an event.

vD3.9.7 SCL 20150905
- raise OpenEVSE temperature thresholds +10C to match OE-II

SCL 20150905
- fix compile error when AMMETER disabled
	
vD3.9.6 SCL 20150818
- for OpenEVSE II, bump up TEMPERATURE_AMBIENT_xxx by 10 due to extra headroom of CUI VSK-S3-12U power supply
	
vD3.9.5 SCL 20150722
- merge changes from temp branch:
	1. EVSE goes to sleep after time/charge limit met.. would stay in sleep
	-> automatically cancel sleep mode when car disconnected *only if* the
	   sleep was induced by time/charge limit